build(Workflow): Tooling — refactored
* new ESling configuration
* redundant eventBus dropped
* new StyleLint configuration
* yarn-2 release updated
* types at index.d.ts updated
* cypress dropped so far to avoid interference
* yarn / packahge.json updated
* TS-config linked w/t eslint and updated
* dependencies tree rebuild
* SCSS updated to lazy-loading of vars/*.scss

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,50 +1,37 @@
 nodeLinker: node-modules
 
 packageExtensions:
-  "jest@*":
+  "@inkline/nuxt@*":
     peerDependencies:
-      "@babel/core": "*"
-  "@nuxt/typescript-build@*":
-    peerDependencies:
+      "@inkline/inkline": "*"
+      vue: "*"
       webpack: "*"
   "@nuxt/types@*":
     peerDependencies:
       webpack: "*"
-  "web3-provider-engine@*":
+  "@nuxt/typescript-build@*":
     peerDependencies:
-      "@babel/core": "*"
-  "@portis/web3@*":
+      webpack: "*"
+  "@nuxtjs/axios@*":
     peerDependencies:
-      "@babel/core": "*"
+      axios: "*"
   "@nuxtjs/eslint-config-typescript@*":
     peerDependencies:
       eslint: "*"
-  "cypress-nuxt@*":
+  "@portis/web3@*":
     peerDependencies:
-      webpack: "*"
-      "@cypress/webpack-preprocessor": "*"
-  "@cypress/vue@*":
-    dependencies:
-      vue: "*"
+      "@babel/core": "*"
+  jest@*:
     peerDependencies:
-      "@vue/test-utils": "*"
-      vue-template-compiler: "*"
-      vue: "*"
-  "typed-vuex@*":
+      "@babel/core": "*"
+  typed-vuex@*:
     peerDependencies:
-      "vuex": "*"
-  "@nuxtjs/axios@*":
+      vuex: "*"
+  web3-provider-engine@*:
     peerDependencies:
-      "axios": "*"
-  "zksync@*":
+      "@babel/core": "*"
+  zksync@*:
     peerDependencies:
       "@ethersproject/logger": "*"
-  "@inkline/nuxt@*":
-    peerDependencies:
-      vue: "*"
-      webpack: "*"
-      "@inkline/inkline": "*"
 
-
-
-yarnPath: ".yarn/releases/yarn-rc.js"
+yarnPath: .yarn/releases/yarn-2.4.1.cjs
