--- a/.eslintignore
+++ b/.eslintignore
@@ -1,17 +1,9 @@
-# don't ever lint node_modules
 /node_modules/*
-/src/static/sw.js
-# don't ever lint public
 /.nuxt/*
-/src/assets/fonts/*
-/src/assets/imgs/*
-/src/store/operation.ts
+/src/static/*
 /.github/*
 /.idea/*
 /environments/*
 /public/*
 /_nuxt/*
-sw.js*
-/src/assets
-tests/*
-/tests/*
+/src/static/sw.js
