--- a/.eslintignore
+++ b/.eslintignore
@@ -1,9 +1,10 @@
-/node_modules/*
-/.nuxt/*
-/src/static/*
-/.github/*
-/.idea/*
-/environments/*
-/public/*
-/_nuxt/*
-/src/static/sw.js
+node_modules/*
+.nuxt/*
+src/static/*
+.github/*
+.idea/*
+environments/*
+public/*
+_nuxt/*
+src/static/sw.js
+.eslintrc.js
