--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "zksync": "^0.10.8"
   },
   "devDependencies": {
+    "@ethersproject/providers": "^5.1.0",
     "@nuxt/test-utils": "0.2.2",
     "@nuxt/types": "latest",
     "@nuxt/typescript-build": "latest",
@@ -152,6 +153,7 @@
     "vue-class-component": "^7.2.6",
     "vue-jest": "^3.0.7",
     "vuex": "^3.6.2",
+    "web3-core": "^1.3.5",
     "webpack": "4.46.0"
   },
   "peerDependencies": {
