--- a/.eslintignore
+++ b/.eslintignore
@@ -1,10 +1,10 @@
-node_modules/*
-.nuxt/*
-src/static/*
-.github/*
-.idea/*
-environments/*
-public/*
-_nuxt/*
-src/static/sw.js
-.eslintrc.js
+/node_modules/*
+/.nuxt/*
+/src/static/*
+/.github/*
+/.idea/*
+/environments/*
+/public/*
+/_nuxt/*
+/src/static/sw.js
+/.eslintrc.js
