--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "generate": "nuxt generate",
     "test": "jest",
     "format": "prettier --write",
-    "lint-ts": "eslint --fix --ext .ts,.js,.vue ./  src",
+    "lint-ts": "eslint --fix --ext .ts,.js,.vue ./ src",
     "lint-css": "stylelint --fix \"**/*.scss\""
   },
   "stylelint": {
@@ -116,7 +116,7 @@
     "vue-qrcode": "^0.3.5",
     "vue-scrollto": "^2.20.0",
     "web3": "^1.3.5",
-    "zksync": "^0.10.8"
+    "zksync": "^0.10.9"
   },
   "devDependencies": {
     "@ethersproject/providers": "^5.1.0",
@@ -144,6 +144,7 @@
     "sass-loader": "10.1.1",
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
+    "stylelint-config-standard": "^21.0.0",
     "stylelint-high-performance-animation": "^1.5.2",
     "stylelint-scss": "^3.19.0",
     "ts-jest": "^26.5.4",
