--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
       "@nuxtjs/sentry",
       "@nuxtjs/toast",
       "@inkline/inkline/types",
-      "nuxt-i18n"
+      "nuxt-i18n",
     ]
   },
   "exclude": [
@@ -43,6 +43,7 @@
     "dist",
     ".yarn",
     "public",
+    ".nuxt",
     ".github",
     "environments"
   ]
