--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "ci:prepare:mainnet": "yarn run ci && sh cli-process-env.sh 'mainnet' dev 1",
     "ci:validate": "yarn ci && sh cli-process-env.sh 'mainnet' dev 1",
     "deploy:prod": "./cli-deploy-production.sh",
-    "dev": "sh cli-process-env.sh 'rinkeby' 'dev' 1 && nuxt",
+    "dev": "sh cli-process-env.sh 'ropsten' 'dev' 1 && nuxt",
     "prepare_ci": "yarn ci && sh cli-process-env.sh 'rinkeby'",
     "start": "sh sh cli-process-env.sh 'rinkeby' 'dev' && nuxt start",
     "build": "sh cli-process-env.sh 'mainnet' 'prod' true && nuxt build",
