--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "ethers": "^5.1.0",
     "lottie-web": "^5.7.7",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "nuxt": "latest",
     "nuxt-i18n": "^6.22.3",
     "nuxt-typed-vuex": "^0.1.22",
