ci(Firebase CI simplified): Split into simple steps CI process updated for the each of 3 workflows
* added cli-dev.sh scripting
* configured Google Actions

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: yarn install --check-cache
+        run: bash cli-dev.sh ci
 
       - name: Configure for rinkeby [dev]
         run: sh ./cli-process-env.sh rinkeby dev 1
