--- a/.github/workflows/firebase-hosting-push-dev.yml
+++ b/.github/workflows/firebase-hosting-push-dev.yml
@@ -14,10 +14,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: yarn install --check-cache
+        run: bash cli-dev.sh ci
 
       - name: Configure for rinkeby [dev]
-        run: sh ./cli-process-env.sh rinkeby dev 1
+        run: bash ./cli-process-env.sh rinkeby dev 1
 
       - name: Build rinkeby
         run: yarn generate --fail-on-error
@@ -31,7 +31,7 @@ jobs:
           channelID: live
 
       - name: Configure for ropsten
-        run: sh ./cli-process-env.sh ropsten dev 1
+        run: bash ./cli-process-env.sh ropsten dev 1
 
       - name: Build ropsten [dev]
         run: yarn generate --fail-on-error
@@ -45,7 +45,7 @@ jobs:
           channelID: live
 
       - name: Configure for mainnet [dev]
-        run: sh ./cli-process-env.sh mainnet dev 1
+        run: bash ./cli-process-env.sh mainnet dev 1
 
       - name: Build mainnet
         run: yarn generate --fail-on-error
