--- a/package.json
+++ b/package.json
@@ -46,17 +46,17 @@
   },
   "scripts": {
     "ci:clear": "bash cli-dev.sh ci",
-    "ci:build": "yarn run ci && sh ./cli-process-env.sh \"$NETWORK\" && yarn generate --fail-on-error",
+    "ci:build": "yarn run ci && bash ./cli-process-env.sh \"$NETWORK\" && yarn generate --fail-on-error",
     "ci:prepare:rinkeby": "bash cli-process-env.sh 'rinkeby' dev 1",
     "ci:prepare:ropsten": "bash cli-process-env.sh 'ropsten' dev 1",
     "ci:prepare:mainnet": "bash cli-process-env.sh 'mainnet' dev 1",
-    "ci:validate": "yarn ci && sh cli-process-env.sh 'mainnet' dev 1",
+    "ci:validate": "yarn ci && bash cli-process-env.sh 'mainnet' dev 1",
     "deploy:prod": "./cli-deploy-production.sh",
-    "dev": "sh cli-process-env.sh 'rinkeby' 'dev' 1 && nuxt",
-    "prepare_ci": "yarn ci && sh cli-process-env.sh 'rinkeby'",
-    "start": "sh sh cli-process-env.sh 'rinkeby' 'dev' && nuxt start",
-    "build": "sh cli-process-env.sh 'mainnet' 'prod' true && nuxt build",
-    "build:stage": "yarn ci && sh cli-process-env.sh 'rinkeby' 'dev' && yarn generate --fail-on-error",
+    "dev": "bash cli-process-env.sh 'rinkeby' 'dev' 1 && nuxt",
+    "prepare_ci": "yarn ci && bash cli-process-env.sh 'rinkeby'",
+    "start": "bash bash cli-process-env.sh 'rinkeby' 'dev' && nuxt start",
+    "build": "bash cli-process-env.sh 'mainnet' 'prod' true && nuxt build",
+    "build:stage": "yarn ci && bash cli-process-env.sh 'rinkeby' 'dev' && yarn generate --fail-on-error",
     "generate": "nuxt generate",
     "test": "jest",
     "format": "prettier --write",
