ci(DEV-build): Reconfigured firebase for two more nodes
* configured stage.zksync.dev
* configured
rinkeby-beta.zksync.dev
*
updated README.md

Closes ZKF-465

--- a/firebase.json
+++ b/firebase.json
@@ -10,7 +10,7 @@
       ]
     },
     {
-      "site": "rinkeby-beta-zksync-vue",
+      "target": "rinkeby-beta",
       "public": "public",
       "ignore": [
         "firebase.json",
