--- a/.firebaserc
+++ b/.firebaserc
@@ -20,11 +20,11 @@
         "mainnet-dev": [
           "zksync-vue-mainnet-dev"
         ],
-        "rinkeby-beta": [
-          "rinkeby-beta-zksync-vue"
-        ],
         "stage": [
-          "stage-zksync-vue"
+          "stage-mainnet-zksync-vue"
+        ],
+        "rinkeby-beta": [
+          "beta-rinkeby-zksync-vue"
         ]
       }
     },
