--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,5 +1,11 @@
 {
-  "extends": "stylelint-config-standard",
+  "extends": [
+    "stylelint-config-standard",
+    "stylelint-config-recommended"
+  ],
+  "plugins": [
+    "stylelint-scss"
+  ],
   "rules": {
     "color-named": "never",
     "font-family-name-quotes": "always-where-recommended",
@@ -23,7 +29,6 @@
     "declaration-block-semicolon-newline-after": "always",
     "block-opening-brace-newline-after": "always",
     "selector-attribute-quotes": "always",
-    "selector-max-specificity": "0,5,2",
     "selector-pseudo-class-no-unknown": [
       true,
       {
@@ -47,7 +52,24 @@
         "indentInsideParens": "once-at-root-twice-in-block"
       }
     ],
-    "max-nesting-depth": 3,
-    "no-duplicate-selectors": true
+    "max-nesting-depth": 10,
+    "no-duplicate-selectors": true,
+    "no-empty-source": [
+      true,
+      {
+        "severity": "warning"
+      }
+    ],
+    "selector-type-no-unknown": [
+      true,
+      {
+        "ignore": [
+          "custom-elements"
+        ]
+      }
+    ],
+    "no-descending-specificity": false,
+    "at-rule-no-unknown": null,
+    "scss/at-rule-no-unknown": true
   }
 }
