--- a/package.json
+++ b/package.json
@@ -64,33 +64,6 @@
     "lint-ts": "eslint --fix --ext .ts,.js,.vue ./src",
     "lint-css": "stylelint --fix \"**/*.scss\""
   },
-  "stylelint": {
-    "extends": [
-      "stylelint-config-recommended"
-    ],
-    "plugins": [
-      "stylelint-scss"
-    ],
-    "rules": {
-      "no-empty-source": [
-        true,
-        {
-          "severity": "warning"
-        }
-      ],
-      "selector-type-no-unknown": [
-        true,
-        {
-          "ignore": [
-            "custom-elements"
-          ]
-        }
-      ],
-      "no-descending-specificity": true,
-      "at-rule-no-unknown": null,
-      "scss/at-rule-no-unknown": true
-    }
-  },
   "dependencies": {
     "@matterlabs/zk-wallet-onboarding": "1.18.6",
     "@nuxt/components": "2.1.6",
@@ -140,6 +113,7 @@
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
     "stylelint-config-standard": "^21.0.0",
+    "stylelint-declaration-use-variable": "^1.7.2",
     "stylelint-high-performance-animation": "^1.5.2",
     "stylelint-scss": "^3.19.0",
     "typed-vuex": "latest",
