--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -37,7 +37,7 @@ packageExtensions:
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
     spec: "@yarnpkg/plugin-version"
-
-
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: "@yarnpkg/plugin-interactive-tools"
 
 yarnPath: .yarn/releases/yarn-2.4.1.cjs
