feature(Interface): huge update/refactoring of the UI/UX
* scss refactored (variables exploded, paddings/shadows/margins unified)
* icons updated, vertical aligment fixed
* vertical scroll fixed for the mobile / desktop / tablet
* finally fixed onboard popup
* web3-support check added to onboarding
* Version changed to v.2.*.*:23343 (published version + GIT short hash)
* util.ts refactored
* “change fee token” and fee composed into a single line
* “choose token” updated with the icon for the unification
* transactions store “for“ cycle replaced with the foreach
* refactored modal to edit/add contacts
* removed “made with zkSync”
* background shape of zkSync removed
* account vuex refactored
* packages upgraded to the latest versions
* nuxt.config.ts optimized (sentry configured / GTM configured)
* updated local run of ```yarn dev```
* SEO / OGG meta / title updated
* tsconfig.json aligned with the examples of typed-vuex
* gitignore updated
* top menu colors fixed
* mobile dashboard icons fixed
* placement of dark/light mode switcher fixed
* “Transactions“ menu link renamed to “History”
* all calls of the method “reconnect” dropped from any store
* metamask removed from the list when using safari/unsupported browser
* README.md updated
* colors checked and unified
* couple of transitions added

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ public
 # unignore
 !public/.gitignore
 !.yarn/releases/*
-!.yarn/plugins/*
+!.yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+!.yarn/plugins/@yarnpkg/plugin-version.cjs
 /cypress/screenshots/examples/misc.spec.js/
 /cypress/videos/examples/
