--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -24,9 +24,9 @@ packageExtensions:
   jest@*:
     peerDependencies:
       "@babel/core": "*"
-  typed-vuex@*:
+  babel-core@*:
     peerDependencies:
-      vuex: "*"
+      "@babel/core": "*"
   web3-provider-engine@*:
     peerDependencies:
       "@babel/core": "*"
