--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,15 +1,41 @@
 {
-  "extends": "stylelint-config-standard",
+  "extends": [
+    "stylelint-config-recommended",
+    "stylelint-config-standard"
+  ],
   "rules": {
+    "at-rule-empty-line-before": [
+      "always",
+      {
+        "ignore": [
+          "after-comment"
+        ]
+      }
+    ],
+    "at-rule-no-unknown": null,
+    "block-opening-brace-newline-after": "always",
     "color-named": "never",
+    "custom-property-empty-line-before": "never",
+    "declaration-block-semicolon-newline-after": "always",
     "font-family-name-quotes": "always-where-recommended",
     "font-weight-notation": "numeric",
-    "string-quotes": "double",
     "function-url-quotes": "always",
+    "indentation": [
+      2,
+      {
+        "indentInsideParens": "once-at-root-twice-in-block"
+      }
+    ],
+    "max-nesting-depth": 3,
+    "no-descending-specificity": true,
+    "no-duplicate-selectors": true,
+    "no-empty-source": [
+      true,
+      {
+        "severity": "warning"
+      }
+    ],
     "number-leading-zero": "never",
-    "value-no-vendor-prefix": true,
-    "value-list-comma-newline-before": "never-multi-line",
-    "custom-property-empty-line-before": "never",
     "property-no-unknown": [
       true,
       {
@@ -20,8 +46,7 @@
         ]
       }
     ],
-    "declaration-block-semicolon-newline-after": "always",
-    "block-opening-brace-newline-after": "always",
+    "scss/at-rule-no-unknown": true,
     "selector-attribute-quotes": "always",
     "selector-max-specificity": "0,5,2",
     "selector-pseudo-class-no-unknown": [
@@ -33,21 +58,19 @@
         ]
       }
     ],
-    "at-rule-empty-line-before": [
-      "always",
+    "selector-type-no-unknown": [
+      true,
       {
         "ignore": [
-          "after-comment"
+          "custom-elements"
         ]
       }
     ],
-    "indentation": [
-      2,
-      {
-        "indentInsideParens": "once-at-root-twice-in-block"
-      }
-    ],
-    "max-nesting-depth": 3,
-    "no-duplicate-selectors": true
-  }
+    "string-quotes": "double",
+    "value-list-comma-newline-before": "never-multi-line",
+    "value-no-vendor-prefix": true
+  },
+  "plugins": [
+    "stylelint-scss"
+  ]
 }
