--- a/.github/workflows/firebase-hosting-push-dev.yml
+++ b/.github/workflows/firebase-hosting-push-dev.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Build rinkeby
         run: yarn generate --fail-on-error
-      
+
       - name: Deploy to rinkeby site [dev]
         uses: matter-labs/action-hosting-deploy@v0
         with:
@@ -55,5 +55,33 @@ jobs:
         with:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
           target: mainnet-dev
+          projectId: zksync-vue
+          channelID: live
+
+      - name: Configure for stage [dev]
+        run: bash ./cli-process-env.sh mainnet dev 1
+
+      - name: Build stage (mainnet) [dev]
+        run: yarn generate --fail-on-error
+
+      - name: Deploy to stage (mainnet) [dev]
+        uses: matter-labs/action-hosting-deploy@v0
+        with:
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
+          target: stage
+          projectId: zksync-vue
+          channelID: live
+
+      - name: Configure for rinkeby-beta [dev]
+        run: bash ./cli-process-env.sh rinkeby dev 1
+
+      - name: Build rinkeby-beta [dev]
+        run: yarn generate --fail-on-error
+
+      - name: Deploy to rinkeby-beta [dev]
+        uses: matter-labs/action-hosting-deploy@v0
+        with:
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
+          target: rinkeby-beta
           projectId: zksync-vue
           channelID: live
