refactor(onboarding&speedup): huge update, details later

--- a/package.json
+++ b/package.json
@@ -64,21 +64,19 @@
     "lint-css": "stylelint --fix \"**/*.scss\""
   },
   "dependencies": {
-    "@matterlabs/zk-wallet-onboarding": "1.18.6",
-    "@nuxt/components": "2.1.8",
+    "@nuxt/components": "latest",
+    "@nuxt/http": "^0.6.4",
     "@nuxt/typescript-runtime": "latest",
-    "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/google-gtag": "^1.0.4",
-    "@nuxtjs/sentry": "^5.0.3",
-    "@nuxtjs/toast": "^3.3.1",
+    "@nuxtjs/sentry": "latest",
+    "@nuxtjs/toast": "latest",
+    "bnc-onboard": "latest",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^5.1.0",
     "lottie-web": "^5.7.8",
     "moment-timezone": "^0.5.33",
     "nuxt": "latest",
-    "nuxt-i18n": "^6.26.0",
-    "nuxt-typed-vuex": "^0.2.0",
-    "nuxt-webfontloader": "^1.1.0",
+    "nuxt-typed-vuex": "latest",
     "qrcode": "^1.4.4",
     "vue": "latest",
     "vue-qrcode": "^0.3.6",
@@ -94,14 +92,14 @@
     "@inkline/nuxt": "^2.3.6",
     "@nuxt/types": "latest",
     "@nuxt/typescript-build": "latest",
-    "@nuxtjs/dotenv": "^1.4.1",
-    "@nuxtjs/eslint-config-typescript": "^6.0.0",
+    "@nuxtjs/dotenv": "latest",
+    "@nuxtjs/eslint-config-typescript": "latest",
+    "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/style-resources": "latest",
-    "@sentry/webpack-plugin": "^1.15.1",
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
-    "dotenv": "^9.0.0",
+    "dotenv": "latest",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
@@ -111,14 +109,13 @@
     "prettier": "^2.2.1",
     "sass-loader": "10.1.1",
     "stylelint": "^13.13.1",
-    "stylelint-config-recommended": "^5.0.0",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-high-performance-animation": "^1.5.2",
+    "stylelint-config-recommended": "^4.0.0",
+    "stylelint-config-standard": "^21.0.0",
     "stylelint-scss": "^3.19.0",
     "typed-vuex": "0.2.0",
     "typescript": "^4.2.4",
-    "vue-class-component": "7.2.6",
-    "vue-property-decorator": "9.1.2",
+    "vue-class-component": "latest",
+    "vue-property-decorator": "latest",
     "vuex": "^3.6.2",
     "web3-core": "^1.3.5",
     "webpack": "5.36.2"
@@ -134,7 +131,7 @@
     "typescript": true
   },
   "optionalDependencies": {
-    "fs-extra": "^10.0.0",
+    "fs-extra": "^9.1.0",
     "fsevents": "^2.3.2"
   }
 }
