--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -2,8 +2,8 @@
   // extend your base config so you don't have to redefine your compilerOptions
   "extends": "./tsconfig.json",
   "include": [
-    "./src/**/*.ts",
-    "./src/**/*.vue",
-    "./src/**/*.js",
+//    "tests/**/*.ts",
+    "./src/**/*.{ts,js,vue}",
+    ".eslintrc"
   ]
 }
