--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "generate": "nuxt generate",
     "test": "jest",
     "format": "prettier --write",
-    "lint-ts": "eslint --fix --ext .ts,.js,.vue ./src",
+    "lint-ts": "eslint --ext .ts,.js,.vue",
     "lint-css": "stylelint --fix \"**/*.scss\""
   },
   "dependencies": {
@@ -72,14 +72,16 @@
     "@nuxtjs/toast": "latest",
     "bnc-onboard": "latest",
     "ethereum-blockies-base64": "^1.0.2",
-    "ethers": "^5.1.0",
+    "ethers": "^5.1.4",
     "lottie-web": "^5.7.8",
     "moment-timezone": "^0.5.33",
     "nuxt": "latest",
     "nuxt-typed-vuex": "latest",
     "qrcode": "^1.4.4",
+    "ts-node": "^8.3.0",
     "vue": "latest",
-    "vue-qrcode": "^0.3.6",
+    "vue-property-decorator": "^9.1.2",
+    "vue-qrcode": "^0.4.0",
     "vue-scrollto": "^2.20.0",
     "web3": "^1.3.5",
     "zksync": "^0.10.9"
@@ -88,29 +90,44 @@
     "@babel/core": "^7.13.15",
     "@babel/runtime": "^7.13.10",
     "@ethersproject/logger": "^5.1.0",
-    "@ethersproject/providers": "^5.1.0",
+    "@ethersproject/providers": "^5.1.2",
     "@inkline/nuxt": "^2.3.6",
+    "@nuxt/test-utils": "^0.2.2",
     "@nuxt/types": "latest",
+    "@nuxt/typescript": "latest",
     "@nuxt/typescript-build": "latest",
     "@nuxtjs/dotenv": "latest",
-    "@nuxtjs/eslint-config-typescript": "latest",
+    "@nuxtjs/eslint-config": "latest",
+    "@nuxtjs/eslint-config-typescript": "^6.0.0",
+    "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/style-resources": "latest",
     "@types/jest": "^26.0.23",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "babel-eslint": "latest",
     "dotenv": "latest",
-    "eslint": "^7.25.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "fork-ts-checker-webpack-plugin": "^6.2.6",
+    "eslint": "latest",
+    "eslint-config-prettier": "latest",
+    "eslint-config-standard": ">=12.0.0",
+    "eslint-loader": "latest",
+    "eslint-plugin-import": ">=2.18.0",
+    "eslint-plugin-jest": ">=22.7.1",
+    "eslint-plugin-node": ">=9.1.0",
+    "eslint-plugin-nuxt": ">=0.4.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-promise": ">=4.2.1",
+    "eslint-plugin-standard": ">=4.0.0",
+    "eslint-plugin-vue": "latest",
+    "fork-ts-checker-webpack-plugin": "^6.2.7",
     "jest": "^26.6.3",
     "node-sass": "4.14.1",
-    "prettier": "^2.2.1",
+    "nodemon": "latest",
+    "prettier": "latest",
     "sass-loader": "10.1.1",
     "stylelint": "^13.13.1",
-    "stylelint-config-recommended": "^4.0.0",
-    "stylelint-config-standard": "^21.0.0",
+    "stylelint-config-recommended": "^5.0.0",
+    "stylelint-config-standard": "^22.0.0",
     "stylelint-scss": "^3.19.0",
     "typed-vuex": "0.2.0",
     "typescript": "^4.2.4",
