--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,23 @@
 {
   "compilerOptions": {
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
-    "baseUrl": "./src/",
-    "esModuleInterop": true,
-    "importHelpers": true,
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
     "lib": [
       "esnext",
       "esnext.asynciterable",
       "dom"
     ],
-    "module": "esnext",
-    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "allowJs": true,
+    "sourceMap": true,
+    "rootDir": ".",
+    "strict": true,
+    "noImplicitAny": false,
     "noEmit": true,
-//    "noImplicitAny": false,
+    "baseUrl": "./src",
     "paths": {
       "~/*": [
         "./*"
@@ -22,20 +26,11 @@
         "./*"
       ]
     },
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "strict": true,
-    "target": "esnext",
     "types": [
-      "@nuxt/types",
       "@types/node",
-      "@types/jest",
       "@nuxt/vue-app",
-      "@nuxt/types",
       "nuxt-typed-vuex",
+      "typed-vuex",
       "@nuxtjs/sentry",
       "@nuxt/http",
       "@nuxtjs/toast",
@@ -44,13 +39,6 @@
     ]
   },
   "exclude": [
-    "node_modules",
-    "dist",
-    ".yarn",
-    "public",
-    ".nuxt",
-    ".github",
-    "environments",
-    "tests"
+    "tests/*"
   ]
 }
