--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -2,7 +2,7 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to rinkeby, ropsten and mainnet DEV on PR
-'on': pull_request
+"on": pull_request
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -18,11 +18,11 @@ jobs:
 
       - name: Build rinkeby
         run: yarn generate --fail-on-error
-      
+
       - name: Deploy to rinkeby site [dev]
         uses: matter-labs/action-hosting-deploy@v0
         with:
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
           target: rinkeby-dev
           projectId: zksync-vue
           channelID: dev
@@ -36,7 +36,7 @@ jobs:
       - name: Deploy to ropsten site [dev]
         uses: matter-labs/action-hosting-deploy@v0
         with:
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
           target: ropsten-dev
           projectId: zksync-vue
           channelID: dev
@@ -50,7 +50,7 @@ jobs:
       - name: Deploy to mainnet [dev]
         uses: matter-labs/action-hosting-deploy@v0
         with:
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
           target: mainnet-dev
           projectId: zksync-vue
           channelID: dev
