ci(Beta): rinkeby-beta CI reconfigured

--- a/environments/.env.rinkeby-beta
+++ b/environments/.env.rinkeby-beta
@@ -9,3 +9,4 @@ APP_CURRENT_NETWORK=rinkeby
 SENTRY_DSN=https://674c7230d4594037bc1a9797339aa831@o496053.ingest.sentry.io/5662609
 GTAG_ID=GTM-P9S4QSF
 ZK_SPECIAL_API="rinkeby-beta-api.zksync.io"
+ZK_NETWORK="rinkeby-beta"
