--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -3,7 +3,7 @@
   "extends": "./tsconfig.json",
   "include": [
 //    "tests/**/*.ts",
-    "./src/**/*.{ts,js,vue}",
-    ".eslintrc"
+    "src/**/*.{ts,js,vue}",
+    ".eslintrc.json"
   ]
 }
